<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.mobilion.weatherapp.features.cashier.domain.viewmodel.CashierDashboardViewModel" />

        <import type="com.mobilion.weatherapp.core.common.data.PaymentStatus" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_component_2x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="@{()-> viewmodel.updateProduct(PaymentStatus.SUCCESS)}"
                android:text="@string/payment_status_success"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component_2x"
                android:background="@color/red"
                android:onClick="@{()-> viewmodel.updateProduct(PaymentStatus.FAIL)}"
                android:text="@string/payment_status_fail"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component_2x"
                android:background="@color/yellow"
                android:onClick="@{()-> viewmodel.updateProduct(PaymentStatus.PROCEED)}"
                android:text="@string/payment_status_proceed"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>