<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.mobilion.weatherapp.features.customer.domain.viewmodel.CustomerDashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_component_2x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/qrCodeImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/qr_code" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/generateQrButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/green"
                android:onClick="@{()-> viewmodel.generateQrCode()}"
                android:text="@string/generate_qr_code"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/button_blue"
                android:onClick="@{()-> viewmodel.generateQrCode()}"
                android:padding="@dimen/margin_component_2x"
                android:text="@string/status_1s"
                android:textAlignment="center"
                android:textAppearance="@style/TextStyle4"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:text="Ödeme Durumu : Bekliyor"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>